feat(footer): ajout du pied de page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <main> 
         <h2>Page d'accueil</h2> 
         <p>Ce site est créé par l'Étudiant A</p> 
-    </main> 
+    </main>
+    <footer>
+	<p>&copy; 2026 - Notre Projet Collaboratif</p>
+	<p>Créé par l'Étudiant B</p>
+    </footer> 
 </body> 
 </html> 
